modified:   _layouts/post.html 	modified:   _posts/2013/12/2013-12-22-Life-no.md 	modified:   _posts/2013/12/2013-12-23-how-to-build-github-pages.md 	modified:   _posts/2013/12/2013-12-23-server-data.md

--- a/_posts/2013/12/2013-12-22-Life-no.md
+++ b/_posts/2013/12/2013-12-22-Life-no.md
@@ -7,10 +7,12 @@ tags : [code, erlang]
 
 ## 这是一个测试用的页面 2
 
-    loop([H|T]) ->
-    	doSome(H),
-    	loop(T);
-    loop([]) ->
-    	end.
-
+<?prettify?>
+<pre class="prettyprint">
+loop([H|T]) ->
+	doSome(H),
+	loop(T);
+loop([]) ->
+	end.
+</pre>
 
